fixed bug: timer boarder too small on big screen

--- a/src/Timer.css
+++ b/src/Timer.css
@@ -2,7 +2,6 @@
     border: 5px solid #996881;
     border-radius: 23px;
     width: 250px;
-    height: 140px;
     font-size: 4vh;
     display: inline-block;
     margin-top: 50px;
